--- a/css/style.css
+++ b/css/style.css
@@ -190,9 +190,10 @@ body {
     display: flex;
     align-items: center;
     position: relative;
+    mask: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0));
 }
 
-.hero::after {
+/* .hero::after {
     content: '';
     display: block;
     position: absolute;
@@ -200,11 +201,25 @@ body {
     height: 20%;
     bottom: 0;
     background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
+} */
+
+.hero .mask-container {
+    position: absolute;
+    /* background: salmon; */
+    inset: 0;
+    mask: url(../img/test2.svg);
+    mask-size: cover;
+    mask-repeat: no-repeat;
+    mask-position: center;
 }
 
 .hero .content {
     padding: 1.4rem 7%;
-    max-width: 60rem;
+    /* max-width: 60rem; */
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    top: 120px;
 }
 
 .hero .content h1 {
@@ -272,6 +287,10 @@ body {
 
 .about .row .about-img img {
     width: 100%;
+    mask: url('/img/menu/splash.svg');
+    mask-size: 50%;
+    mask-repeat: no-repeat;
+    mask-position: center;
 }
 
 .about .row .content {
@@ -397,7 +416,8 @@ body {
     font-size: 1.5rem;
 }
 
-.products .product-price span, .product-content .product-price span {
+.products .product-price span,
+.product-content .product-price span {
     text-decoration: line-through;
     font-weight: lighter;
     font-size: 1rem;
