--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ body {
     color: var(--bg);
     background-color: #fff;
     transition: 0.3s;
+    overflow-y: auto;
 }
 
 .shopping-cart.active {
@@ -169,31 +170,115 @@ body {
 }
 
 .shopping-cart img {
-    height: 6rem;
+    height: 4rem;
     border-radius: 50%;
 }
 
 .shopping-cart .cart-item h3 {
-    font-size: 1.5rem;
-    padding-bottom: 0.5rem;
+    font-size: 1.4rem;
+    /* padding-bottom: 0.5rem; */
     cursor: pointer;
 }
 
-.shopping-cart .cart-item .item-price {
+
+.shopping-cart .item-price .sub-total span {
+    font-weight: bold;
+}
+
+/* .shopping-cart .item-price .sub-total span {
+    font-weight: bold;
+} */
+
+.shopping-cart .total {
+    font-size: 1.3rem;
+}
+
+.shopping-cart .empty {
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-top: 2rem;
+}
+
+.shopping-cart .cart-item #remove-item,
+#add-item {
+    display: inline-block;
+    padding: 2px 5px;
+    margin: 0 0.5rem;
     font-size: 1.2rem;
-}
-
-.shopping-cart .cart-item .trash {
-    margin-left: auto;
     cursor: pointer;
+    background-color: var(--bg);
+    color: white;
+    font-weight: bold;
 }
 
-.shopping-cart .cart-item .trash:hover {
-    color: var(--primary);
+.shopping-cart .cart-item #remove-item:hover {
+    background-color: red;
 }
 
+.shopping-cart .cart-item #add-item:hover {
+    background-color: green;
+}
 /* Shopping Cart End */
 
+/* Chekout Form Start */
+.form-container {
+    border-top: 1px dashed black;
+    margin-top: 1rem;
+    padding: 1rem;
+}
+
+.form-container form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.form-container .input-group {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+
+.form-container h5 {
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.form-container label {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.form-container span {
+    flex: 0.5;
+    margin-right: 1rem;
+}
+
+.form-container input {
+    background-color: #ddd;
+    padding: 5px;
+    font-size: 1rem;
+    flex: 2;
+    border-radius: 5px;
+}
+
+.form-container button {
+    background-color: royalblue;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
+    margin: 1rem auto;
+    cursor: pointer;
+}
+
+/* Checkout Form End */
 /* Navbar End */
 
 /* Hero Section Start */
@@ -208,16 +293,6 @@ body {
     position: relative;
     mask: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0));
 }
-
-/* .hero::after {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 20%;
-    bottom: 0;
-    background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
-} */
 
 .hero .mask-container {
     position: absolute;
@@ -727,6 +802,9 @@ footer .credit a {
     .modal-container {
         /* Tambahkan aturan max-height untuk mengatasi konten yang panjang pada perangkat seluler */
         max-height: 90vh;
+    }
+    .shopping-cart .item-price {
+        display: flex;
     }
 }
 
